--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,19 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.9.3",
+    "hchs-vue-charts": "^1.2.8",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "pica": "^5.0.0",
     "sass-loader": "^7.1.0",
+    "v-calendar": "^1.0.1",
     "vue": "^2.6.10",
+    "vue-cookie": "^1.1.4",
     "vue-flash-message": "^0.7.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.2",
+    "vue2-filters": "^0.9.1",
     "vueify": "^9.4.1",
     "vuejs-clipper": "^0.2.9",
     "vuex": "^3.1.0"
