Working on new frontend version

--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "axios": "^0.18.0",
     "chart.js": "^2.9.3",
     "hchs-vue-charts": "^1.2.8",
+    "install": "^0.13.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "pica": "^5.0.0",
     "sass-loader": "^7.1.0",
-    "v-calendar": "^1.0.1",
+    "v-calendar": "^1.0.8",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
     "vue-flash-message": "^0.7.2",
