--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.9.3",
+    "d3": "^5.16.0",
+    "d3-array": "^2.4.0",
+    "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
+    "d3-transition": "^1.3.2",
     "hchs-vue-charts": "^1.2.8",
     "install": "^0.13.0",
     "moment": "^2.24.0",
