--- a/client/package.json
+++ b/client/package.json
@@ -7,23 +7,32 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@sakitam-gis/kriging": "^0.1.0",
     "axios": "^0.18.0",
+    "b-spline": "^2.0.1",
     "chart.js": "^2.9.3",
+    "cubic-spline": "^3.0.3",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
+    "d3-zoom": "^2.0.0",
     "hchs-vue-charts": "^1.2.8",
     "install": "^0.13.0",
+    "js-spline": "^1.0.1",
+    "kd-tree-javascript": "^1.0.3",
+    "linear-interpolator": "^1.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "pica": "^5.0.0",
     "sass-loader": "^7.1.0",
+    "thinplate": "0.0.2",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
     "vue-flash-message": "^0.7.2",
+    "vue-lazyload": "^1.3.3",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.2",
     "vue2-filters": "^0.9.1",
